--- a/src/css/addcard-btn.css
+++ b/src/css/addcard-btn.css
@@ -1,10 +1,21 @@
-.btn--new{
-    width:100%;
-    
+.btn--new {
+  width: 100%;
+  border: none;
+  position: relative;
+  border-radius: 10px;
+  height: 35px;
+  background-color: #3177ff;
+  color: white;
+  cursor: pointer;
 }
 
-.btn--new::before{
-    content:'';
-    position: absolute;
-    
+.btn--new::before {
+  content: "\2b";
+  font-weight: 400;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding-right: 50px;
+  transform: translate(-50%, -50%);
+  font-size: 1.4rem;
 }
