--- a/src/css/public.css
+++ b/src/css/public.css
@@ -1,5 +1,15 @@
+/* Fonts */
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Montserrat:wght@500&display=swap");
+
 :root {
   --centralized-container--width: 80%;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 .centralized-container {
