--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,28 +1,35 @@
-.search{
-    position: relative;
-    width:100%;
-    background-color: #E2E2E2;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 35px;
+.search {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  background-color: #e2e2e2;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
 }
 
-.search-input{
-    width: 75%;
-    border:none;
-    outline: none;
-    background-color: transparent;
+.search-input {
+  width: 75%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  position: relative;
+  z-index: 3;
 }
 
-.search::after{
-    content:'\f002';
-    font-weight: 800;
-    font-size: 0.9rem;
-    font-family: "Font Awesome 5 Free";
-    position: absolute;
-    top:50%;
-    left:5%;
-    transform: translateY(-50%);
+.search::after {
+  content: "\f002";
+  z-index:2;
+  display: inline-block;
+  font-weight: 800;
+  font-size: 0.9rem;
+  font-family: "Font Awesome 5 Free";
+  position: absolute;
+  width: 75%;
+  top: 50%;
+  padding-right: 35px;
+  transform: translateY(-50%);
 }
