--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,13 +1,13 @@
-header{
-    padding:5vh 0 2.5vh 0;
+header {
+  padding: 5vh 0 2.5vh 0;
 }
 
 header .centralized-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap:19.5px;
-  padding:1vh 0;
+  gap: 19.5px;
+  padding: 1vh 0;
 }
 
 header h1 {
@@ -15,14 +15,11 @@ header h1 {
   margin: 0;
 }
 
-
-header h1::after{
-    content:'Inspired By Notion';
-    font-size: 0.8rem;
-    padding-left: 10px;
-  }
-
-
+header h1::after {
+  content: "Inspired By Notion";
+  font-size: 0.8rem;
+  padding-left: 10px;
+}
 
 @media only screen and (min-width: 765px) {
   header .centralized-container {
