--- a/src/css/filter-form.css
+++ b/src/css/filter-form.css
@@ -6,7 +6,7 @@
 
 @media only screen and (min-width: 765px) {
   .filter-form {
-    flex-direction: row-reverse;
+    flex-direction: row;
     width: 50%;
   }
 
