--- a/src/css/addcard--popup.css
+++ b/src/css/addcard--popup.css
@@ -1,40 +1,262 @@
-.add-card--overlay{
-    position: relative;
+.add-card--overlay {
+  position: fixed;
+  z-index: 99;
+  inset: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.196);
+}
+
+.add-card--popup {
+  position: absolute;
+  z-index: 999;
+  bottom: 0%;
+  height: 50vh;
+  width: 100%;
+  animation: slideUp 2s ease-in-out;
+  overflow-y: scroll;
+  border-radius: 30px 30px 0 0;
+  background-color: white;
+  overflow-y:scroll;
+}
+
+.add-card--popup::-webkit-scrollbar {
+  visibility: hidden;
+}
+
+@keyframes slideUp {
+  0% {
+    bottom: -100%;
+  }
+  100% {
+    bottom: 0%;
+  }
+}
+
+.add-card-cover-image {
+  display: none;
+}
+
+.add-card-content--header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+
+.add-card-content--header > i {
+  cursor: pointer;
+}
+
+.add-card-content--header--container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.add-card-content--header span {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.add-card-content--header span::after {
+  content: ".";
+}
+
+.add-card-info {
+  display: grid;
+  grid-template-columns: 0.8fr 2.2fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.add-card-info .grid-item {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: #595757;
+  font-size: 14px;
+}
+
+.add-card-info .grid-item .status span {
+  font-size: 14px;
+}
+
+.add-card--todo-cards--categories {
+  display: flex;
+  gap: 20px;
+  min-width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.add-card--todo-cards--categories li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 55px;
+  padding: 0 10px;
+}
+
+.add-card--todo-cards--categories .active {
+  border-bottom: 2px solid black;
+}
+
+.add-card--todo-cards--drag-drop-playground--cards {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+}
+
+.add-card--todo-cards--drag-drop-playground--cards li {
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.add-card--todo-cards--drag-drop-playground--header {
+  padding-bottom: 20px;
+  font-weight: 600;
+}
+
+.add-card--todo-cards--drag-drop-playground
+  li:nth-child(1)
+  .add-card--todo-cards--drag-drop-playground--header {
+  color: #00000070;
+}
+
+.add-card--todo-cards--drag-drop-playground
+  li:nth-child(2)
+  .add-card--todo-cards--drag-drop-playground--header {
+  color: #337ea9;
+}
+
+.add-card--todo-cards--drag-drop-playground
+  li:nth-child(3)
+  .add-card--todo-cards--drag-drop-playground--header {
+  color: #448361;
+}
+
+.add-card--todo-cards--drag-drop-playground--cards li {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px,
+    rgba(15, 15, 15, 0.1) 0px 2px 4px;
+  border-radius: 8px;
+  align-items: center;
+  font-size: 15px;
+
+  position: relative;
+}
+
+.add-card--todo-cards--drag-drop-playground--cards i {
+  padding-right: 10px;
+  height: 100%;
+}
+
+.add-card--todo-cards--drag-drop-playground--card--content {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  gap: 10px;
+  align-items: center;
+  font-size: 15px;
+  padding-left: 10px;
+  position: relative;
+}
+
+.add-card--todo-cards--drag-drop-playground--cards p {
+  max-width: 80%;
+}
+
+.add-card--todo-cards--drag-drop-playground--cards span::after {
+  content: ".";
+}
+
+@media only screen and (min-width: 1200px) {
+  .add-card--popup {
+    bottom: 12.5%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 75vh;
+    width: var(--centralized-container--width);
+    animation: slideUpLaptop 2s ease-in-out;
+    border-radius: 8px;
+    background-color: white;
+  }
+
+  @keyframes slideUpLaptop {
+    0% {
+      bottom: -100%;
+      opacity: 0;
+    }
+    100% {
+      bottom: 12.5%;
+      opacity: 1;
+    }
+  }
+
+  .add-card-cover-image {
+    display: block;
     width: 100%;
-    overflow: hidden;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.196);
-    
-}
+    height: 227px;
+    object-fit: contain;
+  }
 
-.add-card--popup{
+  .add-card-content--header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 100px;
+    gap: 10px;
+  }
+
+  .add-card-content--header > i {
     position: absolute;
-    bottom: 0;
-    animation: slideUp 1s ease-in-out;
-}
+    top:30px;
+    right:30px;
+    display: block;
+    background-color: white;
+    padding:5px 10px;
+    box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px,
+    rgba(15, 15, 15, 0.1) 0px 2px 4px;
+    font-size: 15px;
+  }
 
-@keyframes slideUp{
-    0%{
-        bottom:-100%;
-    }
-    100%{
-        bottom:0;
-    }
-}
-
-.add-card-image{
-    position: relative;
-}
-
-.add-card-image--cover{
-    object-fit: cover;
-    width:100%;
-}
-
-.add-card-image--icon{
+  .add-card-content--header img {
     position: absolute;
-    bottom:-50%;
-    left:10%;
-    transform: translate(-50%,-50%);
-}
+    top: calc(227px - 50px);
+    left: 14%;
+    transform: translateX(-50%);
+    height: 100px;
+    width: 100px;
+    object-fit: contain;
+  }
 
+  .add-card-content--header,
+  .add-card-content--header span {
+    font-size: 30px;
+    font-weight: 500;
+  }
+
+  .add-card-info .grid-item {
+    font-size: 15px;
+  }
+
+  .add-card--todo-cards--categories {
+    overflow-x: hidden;
+  }
+
+  .add-card--todo-cards--drag-drop-playground {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 30px;
+    width: 100%;
+    min-height: 50vh;
+  }
+
+  .add-card--todo-cards--drag-drop-playground > li {
+    width: 30%;
+  }
+}
