--- a/src/css/addcard--popup.css
+++ b/src/css/addcard--popup.css
@@ -1,6 +1,6 @@
 .add-card--overlay {
   position: fixed;
-  z-index: 99;
+  z-index: 1;
   inset: 0;
   width: 100%;
   height: 100vh;
@@ -9,15 +9,15 @@
 
 .add-card--popup {
   position: absolute;
-  z-index: 999;
+  z-index: 9999;
   bottom: 0%;
   height: 50vh;
   width: 100%;
-  animation: slideUp 2s ease-in-out;
+  animation: slideUp 1s ease-in-out;
   overflow-y: scroll;
   border-radius: 30px 30px 0 0;
   background-color: white;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 .add-card--popup::-webkit-scrollbar {
@@ -33,7 +33,7 @@
   }
 }
 
-.add-card-cover-image {
+.cover-image {
   display: none;
 }
 
@@ -63,6 +63,12 @@
 
 .add-card-content--header span::after {
   content: ".";
+}
+
+.icon-image img {
+  height: 25px;
+  width: 25px;
+  object-fit: cover;
 }
 
 .add-card-info {
@@ -173,12 +179,54 @@
   content: ".";
 }
 
+.cover-image {
+  display: none !important;
+}
+
+.custom__image-container input {
+  opacity: 0;
+  height: 0;
+  display: none;
+}
+
+.cover-image--scale {
+  width: 100%;
+  height: 227px;
+}
+
+.custom__image-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.custom__image-container label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 64px;
+  font-weight: 100;
+  background-color: #c0bcbc;
+  color: white;
+  color: black;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.icon-image--scale {
+  width: 25px;
+  height: 25px;
+  font-size: 32px !important;
+  font-weight: 300 !important;
+  background-color: white !important;
+}
+
 @keyframes popdown {
-  100%{
-    bottom:-100%;
+  100% {
+    bottom: -100%;
     opacity: 0;
   }
-  
 }
 
 @media only screen and (min-width: 1200px) {
@@ -188,7 +236,7 @@
     transform: translateX(-50%);
     height: 75vh;
     width: var(--centralized-container--width);
-    animation: slideUpLaptop 2s ease-in-out;
+    animation: slideUpLaptop 1s ease-in-out;
     border-radius: 8px;
     background-color: white;
   }
@@ -204,13 +252,6 @@
     }
   }
 
-  .add-card-cover-image {
-    display: block;
-    width: 100%;
-    height: 227px;
-    object-fit: contain;
-  }
-
   .add-card-content--header {
     display: flex;
     flex-direction: row;
@@ -221,17 +262,17 @@
 
   .add-card-content--header > i {
     position: absolute;
-    top:30px;
-    right:30px;
+    top: 30px;
+    right: 30px;
     display: block;
     background-color: white;
-    padding:5px 10px;
+    padding: 5px 10px;
     box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px,
-    rgba(15, 15, 15, 0.1) 0px 2px 4px;
+      rgba(15, 15, 15, 0.1) 0px 2px 4px;
     font-size: 15px;
   }
 
-  .add-card-content--header img {
+  .icon-image--scale {
     position: absolute;
     top: calc(227px - 50px);
     left: 14%;
@@ -266,5 +307,32 @@
 
   .add-card--todo-cards--drag-drop-playground > li {
     width: 30%;
+  }
+
+  .cover-image {
+    display: block !important;
+  }
+
+  .custom__image-container label {
+    color: white !important;
+  }
+
+  .cover-image img {
+    display: block;
+    width: 100%;
+    height: 227px;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .icon-image img {
+    display: block;
+    width: 100px !important;
+    height: 100px !important;
+    object-fit: cover;
+  }
+
+  .icon-image--scale {
+    background-color: #aaa7a7 !important;
   }
 }
