--- a/src/css/todo-card.css
+++ b/src/css/todo-card.css
@@ -11,6 +11,7 @@
 
 .todo-card--edit {
   position: absolute;
+  z-index: 1;
   top: 10px;
   right: 20px;
   padding: 0 10px;
@@ -27,8 +28,21 @@
   visibility: visible;
 }
 
+.todo-card--card-img-container {
+  width: 100%;
+  height: 231px;
+  position: relative;
+  background: white; /* Set white background color */
+}
+
 .todo-card--card-img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+
+.todo-card--card-img[src=""] {
+  visibility: hidden; /* Hide the image with no src attribute */
 }
 
 .todo-card--card-body {
@@ -84,7 +98,7 @@
     transition: background 0.2s ease-out;
   }
 
-  .todo-card:hover {
+  .todo-card:hover , .todo-card--card-img-container:hover {
     background: rgba(55, 53, 47, 0.03);
   }
 }
