implemented delete Feature

--- a/src/css/addcard--popup.css
+++ b/src/css/addcard--popup.css
@@ -190,6 +190,7 @@
 
 .add-card--todo-cards--drag-drop-playground--cards .active::before{
   content:'';
+  z-index: 9999;
   width: 100%;
   height: 3px;
   background-color: cyan;
