--- a/src/css/addcard-btn.css
+++ b/src/css/addcard-btn.css
@@ -32,6 +32,7 @@
 .task{
   width:100% !important;
   height: 40px !important;
+  box-shadow: none !important;
 }
 
 @media only screen and (min-width: 765px) {
